--- a/main.html
+++ b/main.html
@@ -13,23 +13,40 @@
   </head>
 
   <body>
-    <footer>
-      <div class="content">
-        <div class="top">
-          <div class="logo-details">
-            <span class="logo_name">company</span>
-          </div>
-          <div class="media-icons">
-            <!-- your code here -->
-          </div>
+  <footer>
+    <div class="footer-container">
+        <div class="footer-section">
+            <h3>Home</h3>
+            <a href="#">Homepage</a>
         </div>
-        <div class="link-boxes">
-          <!-- your code here -->
+        <div class="footer-section">
+            <h3>About</h3>
+            <a href="#">About Us</a>
         </div>
-      </div>
-      <div class="bottom-details">
-        <!-- your code here -->
-      </div>
-    </footer>
+        <div class="footer-section">
+            <h3>Links</h3>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms of Service</a>
+        </div>
+        <div class="footer-section">
+            <h3>Services</h3>
+            <a href="#">Web Development</a>
+            <a href="#">App Development</a>
+            <a href="#">SEO Services</a>
+        </div>
+        <div class="footer-section">
+            <h3>Contact</h3>
+            <p>Contact Number: 8879887262</p>
+            <p><a href="#">Contact Us</a></p>
+        </div>
+    </div>
+    <div class="social-media">
+        <a href="#" class="media-icons">Facebook</a>
+        <a href="#" class="media-icons">Twitter</a>
+        <a href="#" class="media-icons">LinkedIn</a>
+        <a href="#" class="media-icons">Instagram</a>
+        <a href="#" class="media-icons">YouTube</a>
+    </div>
+</footer>
   </body>
 </html>
