--- a/main.html
+++ b/main.html
@@ -1,35 +1,66 @@
-<footer>
-    <div class="footer-container">
-        <div class="footer-section">
-            <h3>Home</h3>
-            <a href="#">Homepage</a>
-        </div>
-        <div class="footer-section">
-            <h3>About</h3>
-            <a href="#">About Us</a>
-        </div>
-        <div class="footer-section">
-            <h3>Links</h3>
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms of Service</a>
-        </div>
-        <div class="footer-section">
-            <h3>Services</h3>
-            <a href="#">Web Development</a>
-            <a href="#">App Development</a>
-            <a href="#">SEO Services</a>
-        </div>
-        <div class="footer-section">
-            <h3>Contact</h3>
-            <p>Contact Number: 8879887262</p>
-            <p><a href="#">Contact Us</a></p>
-        </div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
+
+  <body>
+	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <footer class="footer">
+    <div class="footer-section">
+        <h3>Home</h3>
+        <ul>
+            <li><a href="/">Homepage</a></li>
+            <li><a href="/features">Features</a></li>
+            <li><a href="/pricing">Pricing</a></li>
+        </ul>
     </div>
-    <div class="social-media">
-        <a href="#" class="media-icons">Facebook</a>
-        <a href="#" class="media-icons">Twitter</a>
-        <a href="#" class="media-icons">LinkedIn</a>
-        <a href="#" class="media-icons">Instagram</a>
-        <a href="#" class="media-icons">YouTube</a>
+
+    <div class="footer-section">
+        <h3>About</h3>
+        <ul>
+            <li><a href="/about">Our Story</a></li>
+            <li><a href="/team">Team</a></li>
+            <li><a href="/careers">Careers</a></li>
+        </ul>
+    </div>
+
+    <div class="footer-section">
+        <h3>Services</h3>
+        <ul>
+            <li><a href="/consulting">Consulting</a></li>
+            <li><a href="/development">Development</a></li>
+            <li><a href="/design">Design</a></li>
+        </ul>
+    </div>
+
+    <div class="footer-section">
+        <h3>Contact</h3>
+        <ul>
+            <li>Phone: <a href="tel:8879887262">8879887262</a></li>
+            <li><a href="/support">Support</a></li>
+            <li><a href="/contact">Get in Touch</a></li>
+        </ul>
+    </div>
+
+    <div class="footer-section social">
+        <h3>Follow Us</h3>
+        <div class="media-icons">
+            <a href="#" class="media-icons"><i class="fab fa-facebook"></i></a>
+            <a href="#" class="media-icons"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="media-icons"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="media-icons"><i class="fab fa-linkedin"></i></a>
+            <a href="#" class="media-icons"><i class="fab fa-youtube"></i></a>
+        </div>
     </div>
 </footer>
+  </body>
+</html>
