--- a/main.html
+++ b/main.html
@@ -13,53 +13,38 @@
   </head>
 
   <body>
-	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <footer class="footer">
-    <div class="footer-section">
-        <h3>Home</h3>
-        <ul>
-            <li><a href="/">Homepage</a></li>
-            <li><a href="/features">Features</a></li>
-            <li><a href="/pricing">Pricing</a></li>
-        </ul>
-    </div>
-
-    <div class="footer-section">
-        <h3>About</h3>
-        <ul>
-            <li><a href="/about">Our Story</a></li>
-            <li><a href="/team">Team</a></li>
-            <li><a href="/careers">Careers</a></li>
-        </ul>
-    </div>
-
-    <div class="footer-section">
-        <h3>Services</h3>
-        <ul>
-            <li><a href="/consulting">Consulting</a></li>
-            <li><a href="/development">Development</a></li>
-            <li><a href="/design">Design</a></li>
-        </ul>
-    </div>
-
-    <div class="footer-section">
-        <h3>Contact</h3>
-        <ul>
-            <li>Phone: <a href="tel:8879887262">8879887262</a></li>
-            <li><a href="/support">Support</a></li>
-            <li><a href="/contact">Get in Touch</a></li>
-        </ul>
-    </div>
-
-    <div class="footer-section social">
-        <h3>Follow Us</h3>
-        <div class="media-icons">
-            <a href="#" class="media-icons"><i class="fab fa-facebook"></i></a>
-            <a href="#" class="media-icons"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="media-icons"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="media-icons"><i class="fab fa-linkedin"></i></a>
-            <a href="#" class="media-icons"><i class="fab fa-youtube"></i></a>
+	  <footer>
+    <div class="footer-container">
+        <div class="footer-section">
+            <h4>Home</h4>
+            <a href="#">Homepage</a>
         </div>
+        <div class="footer-section">
+            <h4>About</h4>
+            <a href="#">About Us</a>
+        </div>
+        <div class="footer-section">
+            <h4>Links</h4>
+            <a href="#">Page 1</a>
+            <a href="#">Page 2</a>
+        </div>
+        <div class="footer-section">
+            <h4>Services</h4>
+            <a href="#">Service 1</a>
+            <a href="#">Service 2</a>
+        </div>
+        <div class="footer-section">
+            <h4>Contact</h4>
+            <p>Contact Number: 8879887262</p>
+            <a href="#">Social Media</a>
+        </div>
+    </div>
+    <div class="social-media">
+        <a href="#" class="media-icons">Facebook</a>
+        <a href="#" class="media-icons">Twitter</a>
+        <a href="#" class="media-icons">Instagram</a>
+        <a href="#" class="media-icons">LinkedIn</a>
+        <a href="#" class="media-icons">YouTube</a>
     </div>
 </footer>
   </body>
