--- a/main.html
+++ b/main.html
@@ -14,37 +14,42 @@
 
   <body>
 	  <footer>
-    <div class="footer-container">
-        <div class="footer-section">
-            <h4>Home</h4>
-            <a href="#">Homepage</a>
-        </div>
-        <div class="footer-section">
-            <h4>About</h4>
-            <a href="#">About Us</a>
-        </div>
-        <div class="footer-section">
-            <h4>Links</h4>
-            <a href="#">Page 1</a>
-            <a href="#">Page 2</a>
-        </div>
-        <div class="footer-section">
-            <h4>Services</h4>
-            <a href="#">Service 1</a>
-            <a href="#">Service 2</a>
-        </div>
-        <div class="footer-section">
-            <h4>Contact</h4>
-            <p>Contact Number: 8879887262</p>
-            <a href="#">Social Media</a>
-        </div>
-    </div>
-    <div class="social-media">
+		  <h1>company</h1>
+		   <div class="social-media">
         <a href="#" class="media-icons">Facebook</a>
         <a href="#" class="media-icons">Twitter</a>
         <a href="#" class="media-icons">Instagram</a>
         <a href="#" class="media-icons">LinkedIn</a>
         <a href="#" class="media-icons">YouTube</a>
+    </div>
+    <div class="footer-container">
+        <div class="footer-section">
+            <h4><u>Links</u></h4>
+            <p>Home</p>
+			<p>Contact</p>
+			<p>About Us</p>
+			<p>Get Started</p>
+		</div>
+        <div class="footer-section">
+            <h4><u>Services</u></h4>
+            <p>App Design</p>
+			<p>Web Design</p>
+			<p>Logo Design</p>
+			<p>Banner Design</p>
+        </div>
+		<div class="footer-section">
+            <h4><u>Other</u> Services</h4>
+            <p>Seo</p>
+			<p>Content Marketing</p>
+			<p>Prints</p>
+			<p>Social Media</p>
+        </div>
+        <div class="footer-section">
+            <h4><u>Contact</u></h4>
+            <p>Contact Number: 8879887262</p>
+			<p>Contact Number: 8879887262</p>
+            <p>contact@company.com</p>
+        </div>
     </div>
 </footer>
   </body>
