--- a/main.html
+++ b/main.html
@@ -1,56 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Company Footer</title>
     <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-  </head>
-
-  <body>
-	  <footer>
-		  <h1>company</h1>
-		   <div class="social-media">
-        <a href="#" class="media-icons">Facebook</a>
-        <a href="#" class="media-icons">Twitter</a>
-        <a href="#" class="media-icons">Instagram</a>
-        <a href="#" class="media-icons">LinkedIn</a>
-        <a href="#" class="media-icons">YouTube</a>
-    </div>
-    <div class="footer-container">
-        <div class="footer-section">
-            <h4><u>Links</u></h4>
-            <p>Home</p>
-			<p>Contact</p>
-			<p>About Us</p>
-			<p>Get Started</p>
-		</div>
-        <div class="footer-section">
-            <h4><u>Services</u></h4>
-            <p>App Design</p>
-			<p>Web Design</p>
-			<p>Logo Design</p>
-			<p>Banner Design</p>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+</head>
+<body>
+    <footer>
+        <h1>Company</h1>
+        <div class="social-media">
+            <a href="#" class="media-icons"><i class="fa fa-facebook"></i></a>
+            <a href="#" class="media-icons"><i class="fa fa-twitter"></i></a>
+            <a href="#" class="media-icons"><i class="fa fa-instagram"></i></a>
+            <a href="#" class="media-icons"><i class="fa fa-linkedin"></i></a>
+            <a href="#" class="media-icons"><i class="fa fa-youtube"></i></a>
         </div>
-		<div class="footer-section">
-            <h4><u>Other</u> Services</h4>
-            <p>Seo</p>
-			<p>Content Marketing</p>
-			<p>Prints</p>
-			<p>Social Media</p>
+        <div class="footer-container">
+            <div class="footer-section">
+                <h4><u>Links</u></h4>
+                <p><a href="#">Home</a></p>
+                <p><a href="#">Contact</a></p>
+                <p><a href="#">About Us</a></p>
+                <p><a href="#">Get Started</a></p>
+            </div>
+            <div class="footer-section">
+                <h4><u>Services</u></h4>
+                <p><a href="#">App Design</a></p>
+                <p><a href="#">Web Design</a></p>
+                <p><a href="#">Logo Design</a></p>
+                <p><a href="#">Banner Design</a></p>
+            </div>
+            <div class="footer-section">
+                <h4><u>Other Services</u></h4>
+                <p><a href="#">SEO</a></p>
+                <p><a href="#">Content Marketing</a></p>
+                <p><a href="#">Prints</a></p>
+                <p><a href="#">Social Media</a></p>
+            </div>
+            <div class="footer-section">
+                <h4><u>Contact</u></h4>
+                <p>Contact Number: 8879887262</p>
+                <p>contact@company.com</p>
+            </div>
         </div>
-        <div class="footer-section">
-            <h4><u>Contact</u></h4>
-            <p>Contact Number: 8879887262</p>
-			<p>Contact Number: 8879887262</p>
-            <p>contact@company.com</p>
-        </div>
-    </div>
-</footer>
-  </body>
+    </footer>
+</body>
 </html>
