--- a/main.html
+++ b/main.html
@@ -21,24 +21,24 @@
         <div class="footer-container">
             <div class="footer-section">
                 <h4><u>Links</u></h4>
-                <p><a href="#">Home</a></p>
-                <p><a href="#">Contact</a></p>
-                <p><a href="#">About Us</a></p>
-                <p><a href="#">Get Started</a></p>
+                <p>Home</p>
+                <p>Contact</p>
+                <p>About Us</p>
+                <p>Get Started</p>
             </div>
             <div class="footer-section">
                 <h4><u>Services</u></h4>
-                <p><a href="#">App Design</a></p>
-                <p><a href="#">Web Design</a></p>
-                <p><a href="#">Logo Design</a></p>
-                <p><a href="#">Banner Design</a></p>
+                <p>App Design</p>
+                <p>Web Design</p>
+                <p>Logo Design</p>
+                <p>Banner Design</p>
             </div>
             <div class="footer-section">
                 <h4><u>Other Services</u></h4>
-                <p><a href="#">SEO</a></p>
-                <p><a href="#">Content Marketing</a></p>
-                <p><a href="#">Prints</a></p>
-                <p><a href="#">Social Media</a></p>
+                <p>SEO</p>
+                <p>Content Marketing</p>
+                <p>Prints</p>
+                <p>Social Media</p>
             </div>
             <div class="footer-section">
                 <h4><u>Contact</u></h4>
