--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
             </div>
             <div class="footer-section">
                 <h4><u>Other Services</u></h4>
-                <p>SEO</p>
+                <p>SEO</a></p>
                 <p>Content Marketing</p>
                 <p>Prints</p>
                 <p>Social Media</p>
