--- a/main.html
+++ b/main.html
@@ -1,49 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Company Footer</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <footer>
-        <h1>Company</h1>
-        <div class="social-media">
-            <a href="#" class="media-icons"><i class="fa fa-facebook"></i></a>
-            <a href="#" class="media-icons"><i class="fa fa-twitter"></i></a>
-            <a href="#" class="media-icons"><i class="fa fa-instagram"></i></a>
-            <a href="#" class="media-icons"><i class="fa fa-linkedin"></i></a>
-            <a href="#" class="media-icons"><i class="fa fa-youtube"></i></a>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 mb-4">
+                    <h2 class="logo">company</h2>
+                    <div class="social-icons">
+                        <a href="#" class="social-icon facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" class="social-icon twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="social-icon instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="social-icon linkedin"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#" class="social-icon youtube"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <h3>Links</h3>
+                    <ul class="footer-links">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Get Started</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h3>Services</h3>
+                    <ul class="footer-links">
+                        <li><a href="#">App Design</a></li>
+                        <li><a href="#">Web Design</a></li>
+                        <li><a href="#">Logo Design</a></li>
+                        <li><a href="#">Banner Design</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h3>Other services</h3>
+                    <ul class="footer-links">
+                        <li><a href="#">SEO</a></li>
+                        <li><a href="#">Content Marketing</a></li>
+                        <li><a href="#">Prints</a></li>
+                        <li><a href="#">Social Media</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h3>Contact</h3>
+                    <ul class="footer-links">
+                        <li><a href="tel:+918879887262">+91 8879887262</a></li>
+                        <li><a href="tel:+918879887262">+91 8879887262</a></li>
+                        <li><a href="mailto:contact@company.com">contact@company.com</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="footer-container">
-            <div class="footer-section">
-                <h4><u>Links</u></h4>
-                <p>Home</p>
-                <p>Contact</p>
-                <p>About Us</p>
-                <p>Get Started</p>
-            </div>
-            <div class="footer-section">
-                <h4><u>Services</u></h4>
-                <p>App Design</p>
-                <p>Web Design</p>
-                <p>Logo Design</p>
-                <p>Banner Design</p>
-            </div>
-            <div class="footer-section">
-                <h4><u>Other Services</u></h4>
-                <p>SEO</a></p>
-                <p>Content Marketing</p>
-                <p>Prints</p>
-                <p>Social Media</p>
-            </div>
-            <div class="footer-section">
-                <h4><u>Contact</u></h4>
-                <p>Contact Number: 8879887262</p>
-                <p>contact@company.com</p>
+        <div class="footer-bottom">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p>Copyright © 2021 company.</p>
+                    </div>
+                    <div class="col-md-6 text-end">
+                        <p>Privacy policy</p>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
