--- a/main.html
+++ b/main.html
@@ -13,13 +13,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 mb-4">
-                    <h2 class="logo">company</h2>
+                    <h2 class="logo">Company</h2>
                     <div class="social-icons">
-                        <a href="#" class="social-icon facebook"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="social-icon twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-icon instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="social-icon linkedin"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#" class="social-icon youtube"><i class="fab fa-youtube"></i></a>
+                        <a href="#" class="social-icon facebook" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" class="social-icon twitter" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="social-icon instagram" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="social-icon linkedin" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#" class="social-icon youtube" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                 <div class="col-md-3">
@@ -41,7 +41,7 @@
                     </ul>
                 </div>
                 <div class="col-md-3">
-                    <h3>Other services</h3>
+                    <h3>Other Services</h3>
                     <ul class="footer-links">
                         <li><a href="#">SEO</a></li>
                         <li><a href="#">Content Marketing</a></li>
@@ -53,7 +53,6 @@
                     <h3>Contact</h3>
                     <ul class="footer-links">
                         <li><a href="tel:+918879887262">+91 8879887262</a></li>
-                        <li><a href="tel:+918879887262">+91 8879887262</a></li>
                         <li><a href="mailto:contact@company.com">contact@company.com</a></li>
                     </ul>
                 </div>
@@ -63,10 +62,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <p>Copyright © 2021 company.</p>
+                        <p>Copyright © 2021 Company.</p>
                     </div>
                     <div class="col-md-6 text-end">
-                        <p>Privacy policy</p>
+                        <p><a href="#">Privacy Policy</a></p>
                     </div>
                 </div>
             </div>
