--- a/main.html
+++ b/main.html
@@ -13,47 +13,48 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 mb-4">
-                    <h2 class="logo">Company</h2>
+                    <h2 class="logo">company</h2>
                     <div class="social-icons">
-                        <a href="#" class="social-icon facebook" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="social-icon twitter" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-icon instagram" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="social-icon linkedin" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#" class="social-icon youtube" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                        <a href="#" class="social-icon facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" class="social-icon twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="social-icon instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="social-icon linkedin"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#" class="social-icon youtube"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <h3>Links</h3>
                     <ul class="footer-links">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Get Started</a></li>
+                        <li>Home</li>
+                        <li>Contact</li>
+                        <li>About Us</li>
+                        <li>Get Started</li>
                     </ul>
                 </div>
                 <div class="col-md-3">
                     <h3>Services</h3>
                     <ul class="footer-links">
-                        <li><a href="#">App Design</a></li>
-                        <li><a href="#">Web Design</a></li>
-                        <li><a href="#">Logo Design</a></li>
-                        <li><a href="#">Banner Design</a></li>
+                        <li>App Design</li>
+                        <li>Web Design</li>
+                        <li>Logo Design</li>
+                        <li>Banner Design</li>
                     </ul>
                 </div>
                 <div class="col-md-3">
-                    <h3>Other Services</h3>
+                    <h3>Other services</h3>
                     <ul class="footer-links">
-                        <li><a href="#">SEO</a></li>
-                        <li><a href="#">Content Marketing</a></li>
-                        <li><a href="#">Prints</a></li>
-                        <li><a href="#">Social Media</a></li>
+                        <li>SEO</li>
+                        <li>Content Marketing</li>
+                        <li>Prints</li>
+                        <li>Social Media</li>
                     </ul>
                 </div>
                 <div class="col-md-3">
                     <h3>Contact</h3>
                     <ul class="footer-links">
-                        <li><a href="tel:+918879887262">+91 8879887262</a></li>
-                        <li><a href="mailto:contact@company.com">contact@company.com</a></li>
+                        <li>+91 8879887262</li>
+                        <li><+91 8879887262</li>
+                        <li>contact@company.com</li>
                     </ul>
                 </div>
             </div>
@@ -62,10 +63,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <p>Copyright © 2021 Company.</p>
+                        <p>Copyright © 2021 company.</p>
                     </div>
                     <div class="col-md-6 text-end">
-                        <p><a href="#">Privacy Policy</a></p>
+                        <p>Privacy policy</p>
                     </div>
                 </div>
             </div>
