--- a/main.html
+++ b/main.html
@@ -4,72 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Company Footer</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 mb-4">
-                    <h2 class="logo">company</h2>
-                    <div class="social-icons">
-                        <a href="#" class="social-icon facebook"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="social-icon twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-icon instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="social-icon linkedin"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#" class="social-icon youtube"><i class="fab fa-youtube"></i></a>
-                    </div>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h2 class="logo">company</h2>
+                <div class="social-icons">
+                    <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" class="youtube"><i class="fab fa-youtube"></i></a>
                 </div>
-                <div class="col-md-3">
+            </div>
+            <div class="footer-columns">
+                <div class="footer-column">
                     <h3>Links</h3>
-                    <ul class="footer-links">
-                        <li>Home</li>
-                        <li>Contact</li>
-                        <li>About Us</li>
-                        <li>Get Started</li>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Get Started</a></li>
                     </ul>
                 </div>
-                <div class="col-md-3">
+                <div class="footer-column">
                     <h3>Services</h3>
-                    <ul class="footer-links">
-                        <li>App Design</li>
-                        <li>Web Design</li>
-                        <li>Logo Design</li>
-                        <li>Banner Design</li>
+                    <ul>
+                        <li><a href="#">App Design</a></li>
+                        <li><a href="#">Web Design</a></li>
+                        <li><a href="#">Logo Design</a></li>
+                        <li><a href="#">Banner Design</a></li>
                     </ul>
                 </div>
-                <div class="col-md-3">
+                <div class="footer-column">
                     <h3>Other services</h3>
-                    <ul class="footer-links">
-                        <li>SEO</li>
-                        <li>Content Marketing</li>
-                        <li>Prints</li>
-                        <li>Social Media</li>
+                    <ul>
+                        <li><a href="#">SEO</a></li>
+                        <li><a href="#">Content Marketing</a></li>
+                        <li><a href="#">Prints</a></li>
+                        <li><a href="#">Social Media</a></li>
                     </ul>
                 </div>
-                <div class="col-md-3">
+                <div class="footer-column">
                     <h3>Contact</h3>
-                    <ul class="footer-links">
+                    <ul>
                         <li>+91 8879887262</li>
-                        <li><+91 8879887262</li>
+                        <li>+91 8879887262</li>
                         <li>contact@company.com</li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <p>Copyright © 2021 company.</p>
-                    </div>
-                    <div class="col-md-6 text-end">
-                        <p>Privacy policy</p>
-                    </div>
-                </div>
-            </div>
+            <p>Copyright © 2021 company.</p>
+            <a href="#">Privacy policy</a>
         </div>
     </footer>
 </body>
