--- a/main.html
+++ b/main.html
@@ -51,9 +51,10 @@
                 <div class="footer-column">
                     <h3>Contact</h3>
                     <ul>
-                        <li>+91 8879887262</li>
-                        <li>+91 8879887262</li>
-                        <li>contact@company.com</li>
+                        <li><a href="#">+91 8879887262</a></li>
+                        <li><a href="#">+91 8879887262</a></li>
+                        <li><a href="#">+91 8879887262</a></li>
+                        <li><a href="#">contact@company.com</a></li>
                     </ul>
                 </div>
             </div>
