--- a/main.html
+++ b/main.html
@@ -8,61 +8,52 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h2 class="logo">company</h2>
-                <div class="social-icons">
-                    <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#" class="youtube"><i class="fab fa-youtube"></i></a>
-                </div>
-            </div>
-            <div class="footer-columns">
-                <div class="footer-column">
-                    <h3>Links</h3>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Get Started</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3>Services</h3>
-                    <ul>
-                        <li><a href="#">App Design</a></li>
-                        <li><a href="#">Web Design</a></li>
-                        <li><a href="#">Logo Design</a></li>
-                        <li><a href="#">Banner Design</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3>Other services</h3>
-                    <ul>
-                        <li><a href="#">SEO</a></li>
-                        <li><a href="#">Content Marketing</a></li>
-                        <li><a href="#">Prints</a></li>
-                        <li><a href="#">Social Media</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3>Contact</h3>
-                    <ul>
-                        <li><a href="#">+91 8879887262</a></li>
-                        <li><a href="#">+91 8879887262</a></li>
-                        <li><a href="#">+91 8879887262</a></li>
-                        <li><a href="#">contact@company.com</a></li>
-                    </ul>
-                </div>
-            </div>
+  <footer>
+    <div class="footer-container">
+        <div class="footer-section">
+            <h3>Home</h3>
+            <ul>
+                <li><a href="#">Homepage</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Services</a></li>
+            </ul>
         </div>
-        <div class="footer-bottom">
-            <p>Copyright © 2021 company.</p>
-            <a href="#">Privacy policy</a>
+        <div class="footer-section">
+            <h3>About</h3>
+            <ul>
+                <li><a href="#">Our Story</a></li>
+                <li><a href="#">Team</a></li>
+                <li><a href="#">Careers</a></li>
+            </ul>
         </div>
-    </footer>
+        <div class="footer-section">
+            <h3>Links</h3>
+            <ul>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms of Service</a></li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h3>Services</h3>
+            <ul>
+                <li><a href="#">Consulting</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">Development</a></li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h3>Contact</h3>
+            <p>Contact Number: 8879887262</p>
+            <p><a href="#">Contact Us</a></p>
+        </div>
+    </div>
+    <div class="social-media">
+        <a href="#" class="media-icons">FB</a>
+        <a href="#" class="media-icons">TW</a>
+        <a href="#" class="media-icons">IG</a>
+        <a href="#" class="media-icons">LN</a>
+        <a href="#" class="media-icons">YT</a>
+    </div>
+</footer>
 </body>
 </html>
