--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h2 class="logo">company</h2>
+                <h2 class="logo">Company</h2>
                 <div class="social-icons">
                     <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
@@ -40,7 +40,7 @@
                     </ul>
                 </div>
                 <div class="footer-column">
-                    <h3>Other services</h3>
+                    <h3>Other Services</h3>
                     <ul>
                         <li><a href="#">SEO</a></li>
                         <li><a href="#">Content Marketing</a></li>
@@ -58,8 +58,8 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>Copyright © 2021 company.</p>
-            <a href="#">Privacy policy</a>
+            <p>Copyright © 2021 Company.</p>
+            <a href="#">Privacy Policy</a>
         </div>
     </footer>
 </body>
