--- a/main.html
+++ b/main.html
@@ -52,6 +52,7 @@
                     <h3>Contact</h3>
                     <ul>
                         <li><a href="#">+91 8879887262</a></li>
+						<li><a href="#">+91 8879887262</a></li>
                         <li><a href="#">contact@company.com</a></li>
                     </ul>
                 </div>
