--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
                     </ul>
                 </div>
                 <div class="footer-column">
-                    <h3>Service</h3>
+                    <h3>Services</h3>
                     <ul>
                         <li><a href="#">App Design</a></li>
                         <li><a href="#">Web Design</a></li>
@@ -40,7 +40,7 @@
                     </ul>
                 </div>
                 <div class="footer-column">
-                    <h3>Other service</h3>
+                    <h3>Other services</h3>
                     <ul>
                         <li><a href="#">SEO</a></li>
                         <li><a href="#">Content Marketing</a></li>
