--- a/main.html
+++ b/main.html
@@ -1,67 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Company Footer</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Company Footer</title>
+  <link rel="stylesheet" href="footer.css">
+  <!-- Font Awesome CDN for media icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
-    <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h2 class="logo">Company</h2>
-                <div class="social-icons">
-                    <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#" class="youtube"><i class="fab fa-youtube"></i></a>
-                </div>
-            </div>
-            <div class="footer-columns">
-                <div class="footer-column">
-                    <h3>Links</h3>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Get Started</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3>Services</h3>
-                    <ul>
-                        <li><a href="#">App Design</a></li>
-                        <li><a href="#">Web Design</a></li>
-                        <li><a href="#">Logo Design</a></li>
-                        <li><a href="#">Banner Design</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3>Other services</h3>
-                    <ul>
-                        <li><a href="#">SEO</a></li>
-                        <li><a href="#">Content Marketing</a></li>
-                        <li><a href="#">Prints</a></li>
-                        <li><a href="#">Social Media</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3>Contact</h3>
-                    <ul>
-                        <li><a href="#">+91 8879887262</a></li>
-						<li><a href="#">+91 8879887262</a></li>
-                        <li><a href="#">contact@company.com</a></li>
-                    </ul>
-                </div>
-            </div>
+  <!-- ...existing page content... -->
+
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="footer-section">
+        <h3>Home</h3>
+        <ul>
+          <li><a href="/">Homepage</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h3>About</h3>
+        <ul>
+          <li><a href="/about">About Us</a></li>
+          <li><a href="/team">Our Team</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h3>Links</h3>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/blog">Blog</a></li>
+          <li><a href="/careers">Careers</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h3>Services</h3>
+        <ul>
+          <li><a href="/services/web">Web Development</a></li>
+          <li><a href="/services/mobile">Mobile Apps</a></li>
+          <li><a href="/services/design">UI/UX Design</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h3>Contact</h3>
+        <ul>
+          <li>Contact Number: <a href="tel:8879887262">8879887262</a></li>
+          <li><a href="/contact">Contact Form</a></li>
+        </ul>
+        <div class="footer-social">
+          <a href="https://facebook.com" class="media-icons" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://twitter.com" class="media-icons" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+          <a href="https://instagram.com" class="media-icons" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+          <a href="https://linkedin.com" class="media-icons" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://youtube.com" class="media-icons" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
         </div>
-        <div class="footer-bottom">
-            <p>Copyright © 2021 Company.</p>
-            <a href="#">Privacy Policy</a>
-        </div>
-    </footer>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      &copy; 2025 Company Name. All rights reserved.
+    </div>
+  </footer>
 </body>
 </html>
