--- a/main.html
+++ b/main.html
@@ -1,66 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Company Footer</title>
-  <link rel="stylesheet" href="footer.css">
-  <!-- Font Awesome CDN for media icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- ...existing page content... -->
-
-  <footer class="footer">
+    <footer>
     <div class="footer-container">
-      <div class="footer-section">
-        <h3>Home</h3>
-        <ul>
-          <li><a href="/">Homepage</a></li>
-        </ul>
-      </div>
-      <div class="footer-section">
-        <h3>About</h3>
-        <ul>
-          <li><a href="/about">About Us</a></li>
-          <li><a href="/team">Our Team</a></li>
-        </ul>
-      </div>
-      <div class="footer-section">
-        <h3>Links</h3>
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/blog">Blog</a></li>
-          <li><a href="/careers">Careers</a></li>
-        </ul>
-      </div>
-      <div class="footer-section">
-        <h3>Services</h3>
-        <ul>
-          <li><a href="/services/web">Web Development</a></li>
-          <li><a href="/services/mobile">Mobile Apps</a></li>
-          <li><a href="/services/design">UI/UX Design</a></li>
-        </ul>
-      </div>
-      <div class="footer-section">
-        <h3>Contact</h3>
-        <ul>
-          <li>Contact Number: <a href="tel:8879887262">8879887262</a></li>
-          <li><a href="/contact">Contact Form</a></li>
-        </ul>
-        <div class="footer-social">
-          <a href="https://facebook.com" class="media-icons" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://twitter.com" class="media-icons" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-          <a href="https://instagram.com" class="media-icons" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-          <a href="https://linkedin.com" class="media-icons" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-          <a href="https://youtube.com" class="media-icons" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+        <div class="footer-section">
+            <h2>Home</h2>
+            <ul>
+                <li><a href="#">Homepage</a></li>
+                <!-- Add more links if needed -->
+            </ul>
         </div>
-      </div>
+
+        <div class="footer-section">
+            <h2>About</h2>
+            <ul>
+                <li><a href="#">About Us</a></li>
+                <!-- Add more links if needed -->
+            </ul>
+        </div>
+
+        <div class="footer-section">
+            <h2>Links</h2>
+            <ul>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
+                <!-- Add more links -->
+            </ul>
+        </div>
+
+        <div class="footer-section">
+            <h2>Services</h2>
+            <ul>
+                <li><a href="#">Service 1</a></li>
+                <li><a href="#">Service 2</a></li>
+                <li><a href="#">Service 3</a></li>
+                <!-- Add more service links -->
+            </ul>
+        </div>
+
+        <div class="footer-section contact-section">
+            <h2>Contact</h2>
+            <p>Contact Number: 8879887262</p>
+            <ul>
+                <li><a href="#">Email Us</a></li>
+                <!-- Add more contact links/info -->
+            </ul>
+        </div>
+
+        <div class="footer-section social-media-section">
+            <h2>Social Media</h2>
+            <div class="social-icons">
+                <a href="#" class="media-icons">Icon 1</a>
+                <a href="#" class="media-icons">Icon 2</a>
+                <a href="#" class="media-icons">Icon 3</a>
+                <a href="#" class="media-icons">Icon 4</a>
+                <a href="#" class="media-icons">Icon 5</a>
+                <!-- Replace "Icon X" with actual icon elements (e.g., <img>, <svg>, or font icons) -->
+            </div>
+        </div>
     </div>
-    <div class="footer-bottom">
-      &copy; 2025 Company Name. All rights reserved.
-    </div>
-  </footer>
+</footer>
+
+    <script src="app.js"></script>
 </body>
 </html>
